# SpinQit

./: .gitignore  BuildMemo.md  CMakeLists.txt  README.md  requirements.txt  setup.py
cppsrc/: CMakeLists.txt
cppsrc/basic_simulator/: basic_simulator.cpp
cppsrc/basic_simulator/include/: basic_simulator.h
cppsrc/basic_simulator/include/algorithm/: quantum_state.h  state_manager.h
cppsrc/basic_simulator/include/utilities/: circuit.h  condition.h  gateAttr.h  gates.h  matrix.h  simple_json.h
cppsrc/include/igraph/: igraph_export.h  igraph_version.h
cppsrc/include/model/: result.cpp  result.h
cppsrc/include/util/: constants.h  graph_attributes.h
cppsrc/lib/: SpinQInterface.exp  SpinQInterface.lib  SpinQInterface_win_x86_64.exp  SpinQInterface_win_x86_64.lib  simulator-core.lib
cppsrc/nmr/: nmr.cpp
cppsrc/nmr/include/: SpinQInterface.h  SpinQUser.h  SpinQuasar.cpp  SpinQuasar.h  nmr.h  operation.cpp  operation.h
doc/: GettingStarted.md
example/: cif.qasm  cloud_example.py  grover_example.py  hhl_example.py  native_example.py  nmr_example.py  qaoa_maxcut_example.py  qasm_backend_example.py  qasm_example.py  qiskit_hhl_example.py  qiskit_qpe_example.py  qnn_example.py  qnn_pytorch_example.py  qnn_tf_example.py  qsvc_example.py  quantum_counting_example.py  search_max_min.py  vqe_h2_example.py
example/resource/: iris_classes_data.txt
spinqit/: __init__.py
spinqit/algorithm/: __init__.py  amplitude_estimation.py  chemistry.py  coined_quantum_walk.py  expval.py  grover_seach.py  hhl.py  iterative_amplitude_estimation.py  ml_amplitude_estimation.py  qaoa.py  qknn.py  qsvc.py  quantum_counting.py  random_circuit.py  shor.py  torch_interface.py  vqe.py
spinqit/algorithm/loss/: __init__.py  measurement.py  quantum_loss.py
spinqit/algorithm/optimizer/: __init__.py  adam.py  gradientdescent.py  optimizer.py  quantumnaturalgradient.py  scipy_optim.py  spsa.py  torch_optim.py  utils.py
spinqit/backend/: __init__.py  backend.py  backend_util.py  basebackend.py  basic_simulator_backend.py  nmr_backend.py  pytorch_backend.py  qasm_backend.py  spinq_cloud_backend.py
spinqit/backend/client/: __init__.py  spinq_cloud_client.py  spinq_session.py
spinqit/backend/layout/: __init__.py  layout.py  layout_util.py  physical_layout.py  routing_layout.py  sven_swap_mapper.py
spinqit/backend/wrapper/: backend_binding.cpp
spinqit/compiler/: __init__.py  compiler.py  ir.py  native_compiler.py  qasm_compiler.py  qiskit_compiler.py
spinqit/compiler/decomposer/: ZYZdecomposer.py  __init__.py  diagonal.py  isometry_decomposer.py  magic_basis_decomposer.py  multi_controlled_gate.py  uniformly_controlled_gate.py  uniformly_controlled_rotation_gate.py
spinqit/compiler/optimizer/: __init__.py  analyze_path.py  cancel_redundant_gates.py  collapse_single_qubit_gates.py  collapse_two_qubit_gates.py  pass_manager.py  quantum_basis_state_optimization.py  quantum_pure_state_optimization.py  util.py
spinqit/compiler/qasm/: Qasm2ErrorListener.py  Qasm2EventListener.py  Qasm2Lexer.py  Qasm2Listener.py  Qasm2Parser.py
spinqit/compiler/qasm/grammar/: Qasm2.g4
spinqit/compiler/qasm/include/: qelib1.inc
spinqit/compiler/translator/: __init__.py  gate_converter.py  qiskit_to_spinq.py
spinqit/grad/: __init__.py  _grad.py  adjoint_differentiation.py  hardware_grad.py  param_shift.py  spinq_grad.py  torch_grad.py
spinqit/interface/: __init__.py  paddle_interface.py  qlayer.py  spinq_interface.py  tf_interface.py  torch_interface.py  utils.py
spinqit/model/: Ising_gate.py  __init__.py  basic_gate.py  circuit.py  controlled_gate.py  controlled_gate_decomposer.py  exceptions.py  gates.py  instruction.py  inverse_builder.py  matrix_gate.py  multi_control_phase_gate.py  parameter.py  register.py  repeat.py
spinqit/model/spinqCloud/: __init__.py  circuit.py  gate.py  platform.py  task.py
spinqit/primitive/: __init__.py  ae_Q_builder.py  amplitude_amplification.py  amplitude_estimation.py  multi_controlled_gate_builder.py  pauli_builder.py  pauli_expectation.py  phase_estimation.py  power.py  qft.py  reciprocal.py  swap_test.py  tapering.py  two_qubit_state_preparation.py  uniformly_controlled_gate_builder.py  vector_encoding.py
spinqit/qiskit/: __init__.py
spinqit/qiskit/circuit/: __init__.py  _utils.py  add_control.py  barrier.py  bit.py  classicalregister.py  controlledgate.py  delay.py  duration.py  equivalence.py  exceptions.py  gate.py  instruction.py  instructionset.py  measure.py  parameterexpression.py  qpy_serialization.py  quantumcircuit.py  quantumcircuitdata.py  quantumregister.py  register.py  reset.py
spinqit/qiskit/circuit/classicalfunction/: __init__.py  boolean_expression.py  classical_element.py  classical_function_visitor.py  classicalfunction.py  exceptions.py  (+1 more)
spinqit/qiskit/converters/: __init__.py  ast_to_dag.py  circuit_to_dag.py  circuit_to_gate.py  circuit_to_instruction.py  dag_to_circuit.py
spinqit/qiskit/dagcircuit/: dagcircuit.py  dagdependency.py  dagdepnode.py  dagnode.py  exceptions.py
spinqit/qiskit/extensions/: __init__.py  exceptions.py  hamiltonian_gate.py  unitary.py
spinqit/qiskit/qasm/: exceptions.py  qasmlexer.py
spinqit/qiskit/quantum_info/: __init__.py  random.py
spinqit/qiskit/transpiler/: __init__.py  exceptions.py
spinqit/qiskit/utils/: __init__.py  algorithm_globals.py  backend_utils.py  measurement_error_mitigation.py  quantum_instance.py  run_circuits.py
spinqit/solver/: __init__.py  sat.py  tsp.py
spinqit/utils/: __init__.py  circuit_utils.py  function.py
spinqit/view/: __init__.py  matplotlibDrawer.py  utils.py
(+58 files in other folders)
